--- a/credentials.yml.sample
+++ b/credentials.yml.sample
@@ -1,3 +1,4 @@
 google_username: <your username>
 google_password: <your password>
-google_api_key:  <your api key>
+google_api_key:  <your google api key>
+fulcrum_api_key: <your api key for your fulcrum org>
