Rename config file and add api url env var
Rename the config file since it contains more than credentials now.
Move the fulcrum API URL to be set in the config.
Update README with how to set this.

--- a/config.rb.sample
+++ b/config.rb.sample
@@ -1,5 +1,6 @@
 ENV['GOOGLE_USERNAME'] = '<your google username>'
 ENV['GOOGLE_PASSWORD'] = '<your google password>'
 ENV['GOOGLE_API_KEY']  = '<your google api key>'
+ENV['FULCRUM_API_URL'] = 'https://api.fulcrumapp.com/api/v2'>`
 ENV['FULCRUM_API_KEY'] = '<your api key for your fulcrum org>'
 
